Commit2 : Setting Project Section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              <img src="dp.jpg" alt="">
             </div>
             <div id="intro">
-                <h1>Hi! I am Susparsh Banerjee.</h1><br><br>
+                <h1>Hi! <br> I am Susparsh Banerjee.</h1><br><br>
                 <p>↪ A dedicated Coder and a Learner forever<br>↪ MCA 20219-2022 Batch | IET Lucknow <br> ↪ Bit of creative bytes : A Writer </p>
             </div>
         </div>
