--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
             <li><a href="#about" class="active" id="activeProfile" onclick="changeActiveClass('activeProfile')">Profile</a></li>
             <li><a href="#projectsec" class="notactive" id="activeProjects" onclick="changeActiveClass('activeProjects')">Projects</a></li>
             <li><a href="#techsec" class="notactive" id="activeTech" onclick="changeActiveClass('activeTech')">Tech & Tools</a></li>
-            <li><a href="#certificates" class="notactive" id="activeCerts" onclick="changeActiveClass('activeCerts')">Certifications</a></li>
+            <li><a href="#certificates" class="notactive" id="activeCerts" onclick="changeActiveClass('activeCerts')">Certifications + CP</a></li>
             <li><a href="#interactsec" class="notactive" id="activeinteract" onclick="changeActiveClass('activeinteract')">interact</a></li>
             <label for="cross" class="crossbtn" onclick="crossbtn()">
                 <i class="fa fa-times-circle"></i>
             </label>
             
         </ul>
-        
     </nav>
 
     <section>
@@ -65,7 +64,7 @@
         </div>
     </section>
 
-    <section>
+    <section style="background-color: rgb(3, 24, 63)">
         <div id="techsec">
             <h2>Tech and Tools</h2>
             <div id="tech">
@@ -94,19 +93,83 @@
     </section>
 
     <section>
-        <div id="cerificates">
-            <h2> Trainings and Cerifications</h2>
-            <div>
+        <div id="certificates">
+            <h2> Trainings/Certifications<br>+<br>Coding Profile</h2>
+            <div class="certcards">
+                <div class="certcardshead">
+                    <h3> Certificates/Training</h3>
+                </div>
+                <div class="certcardsbody">
+                    <ol>
+                        <li class="certlisthead">Trainings</li>
+                        <li>
+                            <ol type="1">
+                            <li>Summer Training on Java</li>
+                            <li>Organisation : Axpino Technologies, Kanpur</li>
+                            <li>Date : June 2019 - July 2019</li>
+                            <ol>
+                            <ol type="1">
+                                <li>Cloud Computing with AWS</li>
+                                <li>Organisation : Softpro, Lucknow (Online)</li>
+                                <li>Date : Nov 2020 - Jan 2021</li>
+                            <ol>
+                        </li>
 
+                        <li class="certlisthead">Certificates</li>
+                        <li>
+                            <ol type="1">
+                                <li>Java(Basic)</li>
+                                <li>Organisation : HackerRank</li>
+                            <ol>
+                            <ol type="1">
+                                <li>Introduction to HTML5</li>
+                                <li>Organisation : Coursera</li>
+                            <ol>
+                            <ol type="1">
+                                <li>Introduction to CSS3</li>
+                                <li>Organisation : Coursera</li>
+                            <ol>
+                            <ol type="1">
+                                <li>AWS Fundamentals</li>
+                                <li>Organisation : Coursera</li>
+                            <ol>
+                            <ol type="1">
+                                <li>Introfuction to Relationsal Database and SQL</li>
+                                <li>Organisation : Coursera</li>
+                            <ol>
+                            <ol type="1">
+                                <li>Python Data Structures</li>
+                                <li>Organisation : Coursera</li>
+                            <ol>
+                            <ol type="1">
+                                <li>Python for Everybody</li>
+                                <li>Organisation : Coursera</li>
+                            <ol>
+                        </li>
+                    </ol>
+                </div>
             </div>
-
+            <div class="certcards">
+                <div class="certcardshead">
+                    <h3>Coding Profile</h3>
+                </div>
+                <div class="certcardsbody">
+                    <ol type="1">
+                        <ol>
+                            <li>Codechef :  </li>
+                            <li>HackerRank :</li>
+                            <li>Interview Bit : </li>
+                        </ol>
+                    <ol>
+                </div>
+            </div>
         </div>
     </section>
 
 
     <section>
         <div id="interactsec">
-            <h2 style="background: white">Interact Here</h2>
+            <h2>Interact Here</h2>
             <div id = "interactcard">
                 <blockquote>
                     <span>
@@ -117,8 +180,8 @@
                 <a href="https://www.linkedin.com/in/susparsh/"><i class="fa fa-linkedin-square"></i></a>
                 <a href="https://github.com/Susparsh"><i class="fa fa-github"></i></a>
                 <a href="mailto: susparshbanerjee1098@gmail.com?subject = Feedback&body = Message"><i class="fa fa-envelope"></i></a><br><br><br>
-                <p style="font-size: 30px; font-family: cursive; color: black">Feel free to contact me!</p>
-            </div>git
+                <p style="font-size: 30px; font-family: cursive; color: black">Feel free to get in touch!</p>
+            </div>
         </div>
     </section>
 
