Commit10 : DP updated, Resume updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section>
         <div id="about">
             <div id="dp">
-             <img src="dp.jpg" alt="">
+             <img src="dp3.jpg" alt="dp">
             </div>
             <div id="intro">
                 <h1>Hi! <br> I am Susparsh Banerjee.</h1><br><br>
@@ -172,7 +172,7 @@
     </section>
 
     <section id="resumesection">
-        <a href="dp.jpg" download="Susparsh Banerjee" id="downloadbutton"> <i class="fa fa-download"></i> Download Resume</a>
+        <a href="SusparshBanerjee.pdf" download="Susparsh Banerjee" id="downloadbutton"> <i class="fa fa-download"></i> Download Resume</a>
     </section>
 
     <footer>
