Commit12 : Minor Bug Fixes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </details>
                             
                             <details>
-                            <summary> Cloud Computing with AWS</summary> 
+                            <summary>Cloud Computing with AWS</summary> 
                             <p> &nbsp &nbsp &nbsp &nbsp Organisation : Softpro, Lucknow (Online) <br>
                                 &nbsp &nbsp &nbsp &nbsp Date : Nov 2020 - Jan 2021</p>
                             </details>
@@ -123,7 +123,7 @@
                             &#x2B50; Python for Everybody : Coursera <br>
                             &#x2B50; Introduction to HTML5 : Coursera<br>
                             &#x2B50; Introduction to CSS3 : Coursera<br>
-                            &#x2B50;<span  class="extendedline" > Introduction to Relational Database and SQL : Coursera</span><br>
+                            &#x2B50;<span  class="extendedline" > Introduction to Relational DB and SQL : Coursera</span><br>
                             &#x2B50; AWS Fundamentals : Coursera</h5>
                     </div>
                 </div>
